CSS/modal.css
#modal-screen {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.767);
  position: fixed;
  top: 0;
  display: none;
  justify-content: center;
  align-items: center;
}

#modal-block {
  width: 400px;
  height: 500px;
}

#modal-block iframe {
  z-index: 20000;
  width: 100%;
  height: calc(100% - 25px);
  background-color: white;
  border-radius: 10px;
  position: relative;
  bottom: 25px;
  border: 7px darkgray solid;
}

#close-button {
  width: 25px;
  height: 25px;
  border: 2px white solid;
  border-radius: 50%;
  position: relative;
  bottom: 25px;
  left: 400px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

#close-button p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15px;
  font-weight: bold;
  color: white;
  line-height: 25px;
  position: relative;
  top: 7px;
  cursor: pointer;
}

